tests/ui/transmute.msrv.stderr
error[E0277]: the trait bound `util::NotZerocopy: FromBytes` is not satisfied
  --> $DIR/transmute.rs:19:45
   |
19 |     const DST_NOT_FROM_BYTES: NotZerocopy = transmute!(AU16(0));
   |                                             ^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `util::NotZerocopy`
   |
note: required by a bound in `DST_NOT_FROM_BYTES::transmute`
  --> $DIR/transmute.rs:19:45
   |
19 |     const DST_NOT_FROM_BYTES: NotZerocopy = transmute!(AU16(0));
   |                                             ^^^^^^^^^^^^^^^^^^^
   |                                             |
   |                                             required by a bound in this
   |                                             required by this bound in `DST_NOT_FROM_BYTES::transmute`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `util::NotZerocopy<util::AU16>: IntoBytes` is not satisfied
  --> $DIR/transmute.rs:49:36
   |
49 |     const SRC_NOT_AS_BYTES: AU16 = transmute!(NotZerocopy(AU16(0)));
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `util::NotZerocopy<util::AU16>`
   |
note: required by a bound in `SRC_NOT_AS_BYTES::transmute`
  --> $DIR/transmute.rs:49:36
   |
49 |     const SRC_NOT_AS_BYTES: AU16 = transmute!(NotZerocopy(AU16(0)));
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                    |
   |                                    required by a bound in this
   |                                    required by this bound in `SRC_NOT_AS_BYTES::transmute`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `*const usize: IntoBytes` is not satisfied
  --> $DIR/transmute.rs:59:34
   |
59 |     const POINTER_VALUE: usize = transmute!(&0usize as *const usize);
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `*const usize`
   |
note: required by a bound in `POINTER_VALUE::transmute`
  --> $DIR/transmute.rs:59:34
   |
59 |     const POINTER_VALUE: usize = transmute!(&0usize as *const usize);
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                  |
   |                                  required by a bound in this
   |                                  required by this bound in `POINTER_VALUE::transmute`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
